# rile-django-training-2

./: README.md  pyproject.toml
social_media_thing/: manage.py
social_media_thing/main/: models.py  urls.py  views.py
social_media_thing/social_media_thing/: asgi.py  settings.py  urls.py  wsgi.py
social_media_thing/templates/: index.html
