[tool.poetry]
name = "rile-django-training-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rile_django_training_2"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
pylint = "^2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
